--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -1,6 +1,7 @@
 [Internationalization]
 +LocalizationPaths=../../../Engine/Content/Localization/Editor
 +LocalizationPaths=../../../Engine/Content/Localization/EditorTutorials
++LocalizationPaths=../../../Engine/Content/Localization/Keywords
 +ToolTipLocalizationPaths=../../../Engine/Content/Localization/ToolTips
 +PropertyNameLocalizationPaths=../../../Engine/Content/Localization/PropertyNames
 ShouldLoadLocalizedPropertyNames=True
