--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -365,4 +365,13 @@ MaxMemoryAllowance=8192
 +EngineTargetsSettings=(Name="ToolTips",Guid=0F116534468918AEA432DD8C77703BA8,TargetDependencies=(33482D004789784C9DA695A682ACCA1B,AC8BFD2A41A2FB2893BB8EA0AF903E6D),AdditionalManifestDependencies=,RequiredModuleNames=,GatherFromTextFiles=(SearchDirectories=,ExcludePathWildcards=,FileExtensions=),GatherFromPackages=(IncludePathWildcards=,ExcludePathWildcards=,FileExtensions=),GatherFromMetaData=(IncludePathWildcards=("Source/Editor/*","Source/Runtime/*","Source/Developer/*"),ExcludePathWildcards=("*/Source/Developer/NoRedist/*"),KeySpecifications=((MetaDataKey="ToolTip",TextNamespace="UObjectToolTips",TextKeyPattern="{FieldPath}"),(MetaDataKey="ShortToolTip",TextNamespace="UObjectShortToolTips",TextKeyPattern="{FieldPath}"))),NativeCultureStatistics=(CultureName="en"),SupportedCulturesStatistics=((CultureName="es"),(CultureName="ja"),(CultureName="ko"),(CultureName="pt-BR"),(CultureName="zh-CN")))
 +GameTargetsSettings=(Name="Game",Guid=AE0EA34A45461A25BA65A391026F19F8,TargetDependencies=(33482D004789784C9DA695A682ACCA1B,AC8BFD2A41A2FB2893BB8EA0AF903E6D),AdditionalManifestDependencies=,RequiredModuleNames=,GatherFromTextFiles=(SearchDirectories=,ExcludePathWildcards=,FileExtensions=),GatherFromPackages=(IncludePathWildcards=,ExcludePathWildcards=,FileExtensions=),GatherFromMetaData=(IncludePathWildcards=,ExcludePathWildcards=,KeySpecifications=),NativeCultureStatistics=(CultureName="en"),SupportedCulturesStatistics=)
 
-
+[/Script/EditorProjectAppearanceSettings.EditorProjectAppearanceSettings]
+bDisplayUnits=True
++DistanceUnits=EUnit::Centimeters
++MassUnits=EUnit::Kilograms
++TimeUnits=EUnit::Seconds
++TimeUnits=EUnit::Minutes
+AngleUnits=EUnit::Degrees
+SpeedUnits=EUnit::MetersPerSecond
+TemperatureUnits=EUnit::Celsius
+ForceUnits=EUnit::Newtons
