--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2219,3 +2219,6 @@ CrashReportReceiverIP="http://crashreporter.epicgames.com:57005"
 
 [UnrealHeaderTool]
 GeneratedCodeVersion=V1
+
+[/Script/BuildSettings.BuildSettings]
+bEnableShadowVariableWarning=true
