First pass on tidying up all the plugin categories. Reduced everything to a single-level hierarchy, and attempt to group things by broad categories rather than implementation details.
[CL 2521430 by Ben Marsh in Main branch]

--- a/Engine/Plugins/Developer/NullSourceCodeAccess/NullSourceCodeAccess.uplugin
+++ b/Engine/Plugins/Developer/NullSourceCodeAccess/NullSourceCodeAccess.uplugin
@@ -7,7 +7,7 @@
 	"CreatedByURL" : "/dev/null",
 	"EngineVersion" : "4.7.0",
 	"Description" : "Allows access to c++ projects while only looking for clang++",
-	"Category" : "Developer.Source Code Access",
+	"Category" : "Programming",
 	"EnabledByDefault" : true,
 	
 	"Modules" :
