--- a/Engine/Plugins/Developer/GitSourceControl/GitSourceControl.uplugin
+++ b/Engine/Plugins/Developer/GitSourceControl/GitSourceControl.uplugin
@@ -6,7 +6,7 @@
 	"VersionName" : "1.0",
 	"EngineVersion" : "4.7.0",
 	"Description" : "Git source control management",
-	"Category" : "Editor.Source Control",
+	"Category" : "Source Control",
 	"CreatedBy" : "SRombauts and Epic Games, Inc.",
 	"CreatedByURL" : "http://epicgames.com",
 	"CanContainContent" : false,
