--- a/Engine/Plugins/Developer/KDevelopSourceCodeAccess/KDevelopSourceCodeAccess.uplugin
+++ b/Engine/Plugins/Developer/KDevelopSourceCodeAccess/KDevelopSourceCodeAccess.uplugin
@@ -8,7 +8,7 @@
 	"CreatedByURL" : "http://epicgames.com",
 	"EngineVersion" : "4.6.0",
 	"Description" : "Allows access to source code in KDevelop.",
-	"Category" : "Developer.Source Code Access",
+	"Category" : "Programming",
 	"EnabledByDefault" : true,
 	
 	"Modules" :
