--- a/Engine/Plugins/Editor/PluginsEditor/PluginsEditor.uplugin
+++ b/Engine/Plugins/Editor/PluginsEditor/PluginsEditor.uplugin
@@ -8,7 +8,7 @@
 	"CreatedByURL" : "http://epicgames.com",
 	"EngineVersion" : "4.2.0",
 	"Description" : "User interface for managing installed plugins.",
-	"Category" : "Editor.Configuration Tools",
+	"Category" : "Misc",
 	"EnabledByDefault" : true,
 	
 	"Modules" :
