--- a/Engine/Plugins/Runtime/Analytics/AnalyticsMulticast/AnalyticsMulticast.uplugin
+++ b/Engine/Plugins/Runtime/Analytics/AnalyticsMulticast/AnalyticsMulticast.uplugin
@@ -9,7 +9,7 @@
     "DocsURL": "https://docs.unrealengine.com/latest/INT/Gameplay/Analytics/index.html",
     "EngineVersion": "4.8.0",
     "Description": "Forwards analytics API calls to a list of analytics providers to log data to multiple services at once",
-    "Category": "Analytics.Provider",
+    "Category": "Analytics",
 
     "Modules": [
         {
