--- a/Engine/Plugins/Runtime/ProceduralMeshComponent/ProceduralMeshComponent.uplugin
+++ b/Engine/Plugins/Runtime/ProceduralMeshComponent/ProceduralMeshComponent.uplugin
@@ -1,14 +1,14 @@
 {
 	"FileVersion" : 3,
 	
-	"FriendlyName" : "ProceduralMeshComponent Plugin",
+	"FriendlyName" : "Procedural Mesh Component",
 	"Version" : 1,
 	"VersionName" : "1.0",
 	"CreatedBy" : "Epic Games, Inc.",
 	"CreatedByURL" : "http://epicgames.com",
 	"EngineVersion" : "4.8.0",
 	"Description" : "A renderable component and library of utilities for creating and modifying mesh geometry procedurally.",
-	"Category" : "Rendering.Components",
+	"Category" : "Rendering",
 	"EnabledByDefault" : true,
 	
 	"Modules" :
