--- a/Engine/Config/BaseGame.ini
+++ b/Engine/Config/BaseGame.ini
@@ -21,6 +21,7 @@ bRequiresPushToTalk=true
 
 [/Script/EngineSettings.GeneralProjectSettings]
 CompanyName=
+CompanyDistinguishedName=
 CopyrightNotice=Fill out your copyright notice in the Description page of Project Settings.
 Description=
 LicensingTerms=
@@ -38,6 +39,7 @@ IncludePrerequisites=True
 IncludeCrashReporter=True
 InternationalizationPreset=English
 +CulturesToStage=en
+DefaultCulture=en
 
 [/Script/Engine.HUD]
 ConsoleMessageCount=4
