Mark a couple of plugins as beta, rather than having [EARLY ACCESS PREVIEW] in the title.
[CL 2525138 by Ben Marsh in Main branch]

--- a/Engine/Plugins/Runtime/TwitchLiveStreaming/TwitchLiveStreaming.uplugin
+++ b/Engine/Plugins/Runtime/TwitchLiveStreaming/TwitchLiveStreaming.uplugin
@@ -7,9 +7,10 @@
 	"CreatedBy" : "Epic Games, Inc.",
 	"CreatedByURL" : "http://epicgames.com",
 	"EngineVersion" : "4.4.0",
-	"Description" : "[EARLY ACCESS PREVIEW] Live video broadcasting to Twitch for games and the editor",
+	"Description" : "Live video broadcasting to Twitch for games and the editor",
 	"Category" : "Misc",
 	"EnabledByDefault" : false,
+    "IsBetaVersion": true,
 	
 	"Modules" :
 	[
