Fixed some editor preferences not being upgraded correctly This addresses UE-14374.
[CL 2526928 by Andrew Rodham in Main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -472,6 +472,7 @@ bUseStreamingPause=false
 
 ; We renamed EditorGameAgnosticSettings to be less imposing
 +ActiveClassRedirects=(OldClassName="EditorGameAgnosticSettings",NewClassName="/Script/UnrealEd.EditorSettings")
++ActiveClassRedirects=(OldClassName="EditorUserSettings",NewClassName="/Script/UnrealEd.EditorPerProjectUserSettings")
 
 +K2FieldRedirects=(OldFieldName="BTTask_MoveDirectlyToward.bForceMoveToLocation",NewFieldName="bDisablePathUpdateOnGoalLocationChange")
 +K2FieldRedirects=(OldFieldName="BTFunctionLibrary.GetBlackboard", NewFieldName="BTFunctionLibrary.GetOwnersBlackboard")
