--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -357,7 +357,7 @@ MaxMemoryAllowance=8192
 +VersionedIniParams=Engine:/Script/AndroidRuntimeSettings.AndroidRuntimeSettings:AndroidAudio
 +VersionedIniParams=Engine:/Script/UnrealEd.CookerSettings:DefaultPVRTCQuality
 +VersionedIniParams=Editor:StructSerialization:BreakSerializationRecursion
-+VersionedIniParams=EditorUserSettings:/Script/UnrealEd.EditorUserSettings:MaterialQualityLevel
++VersionedIniParams=EditorPerProjectUserSettings:/Script/UnrealEd.EditorPerProjectUserSettings:MaterialQualityLevel
 +VersionedIniParams=Engine:/Script/Engine.Engine:GameUserSettingsClassName
 +VersionedIniParams=Engine:/Script/EngineSettings.GameMapsSettings:Compat.UseDXT5NormalMaps
 +VersionedIniParams=Engine:/Script/EngineSettings.GameMapsSettings:GameDefaultMap
