--- a/Engine/Config/BaseEditorPerProjectUserSettings.ini
+++ b/Engine/Config/BaseEditorPerProjectUserSettings.ini
@@ -1,16 +1,16 @@
 
 ; -------------------------------------------------------------------------------------------------
-; IMPORTANT:  EditorUserSettings.ini has special behavior!
+; IMPORTANT:  EditorPerProjectUserSettings.ini has special behavior!
 ;
 ; This .ini file contains the defaults for many editor and engine "preferences".  These preferences
-; are saved to an EditorUserSettings.ini file in the user's /<Game>/Saved/Config/ directory. 
+; are saved to an EditorPerProjectUserSettings.ini file in the user's /<Game>/Saved/Config/ directory. 
 ;
 ; If you change the default for a preference in here, that change will *NOT* automatically 
 ; propagate to users who already have saved preferences.  The idea is that we must preserve
 ; their existing settings and never want to clobber entries in that file.
 ;
 ; If you add a new preference, the new key and value *WILL* be propagated to the user's
-; EditorUserSettings.ini file.  After we load the user's existing settings, we'll merge in
+; EditorPerProjectUserSettings.ini file.  After we load the user's existing settings, we'll merge in
 ; any missing keys and values that are present in these defaults.
 ;
 ; One easy technique for forcing a "reset" of an already-existing preference is to simply
@@ -18,7 +18,7 @@
 ; key and will propagate the change to existing users' preferences.
 ; -------------------------------------------------------------------------------------------------
 
-[/Script/UnrealEd.EditorUserSettings]
+[/Script/UnrealEd.EditorPerProjectUserSettings]
 ; True if WASD keys should be remapped to flight controls while the right mouse button is held down
 AllowFlightCameraToRemapKeys=True
 
