[UE-14230] Extending FMemberReference so it can properly represent global delegate signatures (and have a UPackage for the member's parent).
#codereview maciej.mroz, jaroslaw.palczynski

[CL 2527120 by Mike Beach in Main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -571,6 +571,9 @@ bUseStreamingPause=false
 +TaggedPropertyRedirects=(ClassName="FSM_AIProjectileThrow",OldPropertyName="MinThrowRange",NewPropertyName="MinAttackRange")
 +TaggedPropertyRedirects=(ClassName="FSM_AIProjectileThrow",OldPropertyName="NumThrowsToReachTargetAccuracy",NewPropertyName="NumAttacksToReachTargetAccuracy")
 
++TaggedPropertyRedirects=(ClassName="MemberReference",OldPropertyName="MemberParentClass",NewPropertyName="MemberParent")
++TaggedPropertyRedirects=(ClassName="SimpleMemberReference",OldPropertyName="MemberParentClass",NewPropertyName="MemberParent")
+
 ;Vim rename
 +TaggedPropertyRedirects=(ClassName="AnimInstance",OldPropertyName="VimVertexAnims",NewPropertyName="VertexAnims")
 
@@ -791,6 +794,9 @@ bUseStreamingPause=false
 
 +K2FieldRedirects=(OldFieldName="Actor.AddActorLocalTranslation",NewFieldName="Actor.K2_AddActorLocalOffset")
 +K2ParamRedirects=(NodeName="/Script/BlueprintGraph.K2Node_CallFunction", OldParamName="Actor.K2_AddActorLocalOffset.DeltaTranslation", NewParamName="DeltaLocation")
+
++TaggedPropertyRedirects=(ClassName="MemberReference",OldPropertyName="MemberParentClass",NewPropertyName="MemberParent")
++TaggedPropertyRedirects=(ClassName="SimpleMemberReference",OldPropertyName="MemberParentClass",NewPropertyName="MemberParent")
 
 ;
 ; Add FHitResult to swept movement, and use wrappers for K2 methods
