--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -353,6 +353,7 @@ bConsiderCompressedPackageFileLengthRequirements=true
 PackagesPerGC=50
 IdleTimeToGC=20
 MaxMemoryAllowance=8192
+bUseFullGCAssetClassNames=true
 +FullGCAssetClassNames=/Script/Engine.World
 +VersionedIniParams=Engine:/Script/Engine.RendererSettings:Compat.UseDXT5NormalMaps
 +VersionedIniParams=Engine:/Script/AndroidRuntimeSettings.AndroidRuntimeSettings:AndroidAudio
