UE-11912 Access None errors creating log spam in user's project when editing BP
In Editor.ini [ScriptErrorLog] section and MaxNumOfAccessViolation variable were added.

#codereview Mike.Beach

[CL 2531156 by Maciej Mroz in Main branch]

--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -344,6 +344,10 @@ bBlueprintIsNotBlueprintType=false
 SkipByteCodeSerialization=true
 BreakSerializationRecursion=true
 
+[ScriptErrorLog]
+; per object
+MaxNumOfAccessViolation=16
+
 [/Script/Engine.ParticleSystemAuditCommandlet]
 HighSpawnRateOrBurstThreshold=35
 FarLODDistanceTheshold=3000
