--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2128,7 +2128,7 @@ bShipForArmV7=True
 bShipForArm64=True
 bShipForArmV7S=False
 bGeneratedSYMFile=False
-bUseRSync=False
+bUseRSync=True
 BundleDisplayName=[PROJECT_NAME]
 BundleName=[PROJECT_NAME]
 BundleIdentifier=com.YourCompany.[PROJECT_NAME]
