--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1223,6 +1223,9 @@ bUseStreamingPause=false
 +K2FieldRedirects=(OldFieldName="KismetSystemLibrary.EXPERIMENTAL_HideAdBanner",NewFieldName="KismetSystemLibrary.HideAdBanner")
 +K2FieldRedirects=(OldFieldName="KismetSystemLibrary.EXPERIMENTAL_CloseAdBanner",NewFieldName="KismetSystemLibrary.ForceCloseAdBanner")
 
+;SoundNodeWavePlayer using asset pointers - DEPRECATED(4.9)
++TaggedPropertyRedirects=(ClassName="SoundNodeWavePlayer",OldPropertyName="SoundWave",NewPropertyName="SoundWaveAssetPtr")
+
 [CoreUObject.Metadata]
 ; Note: UnrealHeaderTool should be rerun after making changes to MetadataRedirects to catch any keys specified in class headers
 +MetadataRedirects=(OldKey="K2Protected", NewKey="BlueprintProtected")
