UE-7584 Blueprint Break on Exceptions does not work with Accessed None errors
config bCanSuppressAccessViolation added in Engine.ini, "false" by default.

#codereview Nick.Whiting, Michael.Noland

[CL 2544767 by Maciej Mroz in Main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1564,6 +1564,7 @@ bEnableInheritableComponents=true
 bDeferDependencyLoads=true
 bForceDisableCookedDependencyDeferring=false
 bExecutionAfterReturn=false
+bCanSuppressAccessViolation=false
 
 [/Script/Engine.Blueprint]
 bRecompileOnLoad=true
