Allow project to define Audio Quality Levels. * Each quality level allows the definition of the max audio channels to be used * A sound cue node exists to allow branching behavior based on quality level. * Wave assets from Wave Player sound nodes will not be loaded if connected only to a branch for a quality level that is not currently selected * Quality Level to use for stand alone is specified via Game User Settings. Changes to this value will not take effect until the next run. * Quality Level to use for PIE is specified from the Level Editor Play Settings and can be changed dynamically causing newly played sounds to use the alternate path * Add SoundNodeAssetReferencer abstract class to operate as an interface for sound nodes that need to have assets loaded dependingo n the sound quality node
[CL 2551249 by Marc Audy in Main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1223,8 +1223,9 @@ bUseStreamingPause=false
 +K2FieldRedirects=(OldFieldName="KismetSystemLibrary.EXPERIMENTAL_HideAdBanner",NewFieldName="KismetSystemLibrary.HideAdBanner")
 +K2FieldRedirects=(OldFieldName="KismetSystemLibrary.EXPERIMENTAL_CloseAdBanner",NewFieldName="KismetSystemLibrary.ForceCloseAdBanner")
 
-;SoundNodeWavePlayer using asset pointers - DEPRECATED(4.9)
+;SoundNodeWavePlayer/ModPlayer using asset pointers - DEPRECATED(4.9)
 +TaggedPropertyRedirects=(ClassName="SoundNodeWavePlayer",OldPropertyName="SoundWave",NewPropertyName="SoundWaveAssetPtr")
++TaggedPropertyRedirects=(ClassName="SoundNodeModPlayer",OldPropertyName="SoundMod",NewPropertyName="SoundModAssetPtr")
 
 [CoreUObject.Metadata]
 ; Note: UnrealHeaderTool should be rerun after making changes to MetadataRedirects to catch any keys specified in class headers
