--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2238,6 +2238,8 @@ DeployServerPort=53501
 [CrashReportClient]
 ;CrashReportReceiverIP="http://localhost:57005"
 CrashReportReceiverIP="http://crashreporter.epicgames.com:57005"
+bAllowToBeContacted=true
+bSendLogFile=true
 
 [UnrealHeaderTool]
 GeneratedCodeVersion=V1
