#replayserver: Add more config options
[CL 2556059 by John Pollard in Main branch]

--- a/Engine/Source/Programs/ReplayServer/ReplayServer.Properties
+++ b/Engine/Source/Programs/ReplayServer/ReplayServer.Properties
@@ -1,5 +1,22 @@
-#ReplayServer Properties
-#Mon May 18 16:28:16 EDT 2015
+#ReplayServer properties
+
+#General properties
+
 quickTaskFrequencyInSeconds=10
 longTaskFrequencyInHours=1
+
 httpPort=80
+
+enableBuiltInWebServer=0
+
+#MongoDB properties
+
+mongoDB_Host=localhost
+mongoDB_Port=27017
+
+mongoDB_DBName=replayDB
+mongoDB_GridFSBucket=replayFS
+mongoDB_ReplayCollection=replayCollection
+mongoDB_ViewerCollection=viewerCollection
+mongoDB_EventCollection=eventCollection
+mongoDB_LogCollection=logCollection
