#replayserver: More config properties
[CL 2559334 by John Pollard in Main branch]

--- a/Engine/Source/Programs/ReplayServer/ReplayServer.Properties
+++ b/Engine/Source/Programs/ReplayServer/ReplayServer.Properties
@@ -20,3 +20,9 @@ mongoDB_ReplayCollection=replayCollection
 mongoDB_ViewerCollection=viewerCollection
 mongoDB_EventCollection=eventCollection
 mongoDB_LogCollection=logCollection
+
+mongoDB_cleanupStaleLiveSessions_MaxMinutes=1
+mongoDB_cleanupOldSessions_MaxDays=30
+mongoDB_cleanupStaleViewers_MaxMinutes=1
+mongoDB_cleanupLogs_MaxDays=14
+mongoDB_cleanupLogs_MaxFinestDays=3
