Optimized the element batcher to perform less memory allocations per frame and pass off some processing to the render thead earlier to avoid additional memcopy's - The Slate RHI renderer now uses a larger upfront pool for vertex buffers to avoid many upfront recreations of the vertex buffers - The window element lists are no longer destroyed each frame and are reused as long as the window that they reference exists.  This reduces memory allocations because arrays are no longer destroyed - Creation of the final rendering batches has now been moved to the rendering thread - The mapping of layers to element batch arrays has been simplified and is no longer emptied each frame thus avoiding memory allocations
[CL 2560820 by Matt Kuhlenschmidt in Main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2087,6 +2087,9 @@ DeviceProfileSelectionModule="ExampleDeviceProfileSelector"
 [SlateRenderer]
 TextureAtlasSize=1024
 FontAtlasSize=1024
+; This is the number of preallocated vertices to create for use in Slate/UMG UI. A smaller number would indicate more resizes of the vertex buffer which could cause hitches.  A larger number increases memory
+; Use stat slatememory to see the cost of these buffers
+NumPreallocatedVertices=50000
 
 [MobileSlateUI]
 bTouchFallbackToMouse=true
