More strict restrictions related to WeakObjectPtr exposed to blueprint. No arrays on weakobjptr. No lazy pointers.  UE-15033
#codereview Jon.Lietz, Zak.Middleton, Richard.Hinckley, Nick.Whiting

[CL 2561280 by Maciej Mroz in Main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1152,6 +1152,7 @@ bUseStreamingPause=false
 +K2FieldRedirects=(OldFieldName="KismetMathLibrary.InverseTransformPosition", NewFieldName="KismetMathLibrary.InverseTransformLocation")
 +K2ParamRedirects=(NodeName="/Script/BlueprintGraph.K2Node_CallFunction", OldParamName="KismetMathLibrary.InverseTransformPosition.Position", NewParamName="Location")
 +K2ParamRedirects=(NodeName="/Script/BlueprintGraph.K2Node_CallFunction", OldParamName="KismetMathLibrary.InverseTransformLocation.Position", NewParamName="Location")
++K2FieldRedirects=(OldFieldName="PrimitiveComponent.GetMoveIgnoreActors", NewFieldName="PrimitiveComponent.CopyArrayOfMoveIgnoreActors")
 
 +EnumRedirects=(EnumName="EMaxConcurrentResolutionRule",OldEnumEntry="EMaxConcurrentResolutionRule::StopFarthest",NewEnumEntry="EMaxConcurrentResolutionRule::StopFarthestThenPreventNew")
 
