#replayserver: Add ability to track recently viewed replays
[CL 2561730 by John Pollard in Main branch]

--- a/Engine/Source/Programs/ReplayServer/ReplayServer.Properties
+++ b/Engine/Source/Programs/ReplayServer/ReplayServer.Properties
@@ -19,6 +19,7 @@ mongoDB_GridFSBucket=replayFS
 mongoDB_ReplayCollection=replayCollection
 mongoDB_ViewerCollection=viewerCollection
 mongoDB_EventCollection=eventCollection
+mongoDB_RecentCollection=recentCollection
 mongoDB_LogCollection=logCollection
 
 mongoDB_cleanupStaleLiveSessions_MaxMinutes=1
