--- a/Engine/Source/Programs/ReplayServer/ReplayServer.Properties
+++ b/Engine/Source/Programs/ReplayServer/ReplayServer.Properties
@@ -27,3 +27,4 @@ mongoDB_cleanupOldSessions_MaxDays=30
 mongoDB_cleanupStaleViewers_MaxMinutes=1
 mongoDB_cleanupLogs_MaxDays=14
 mongoDB_cleanupLogs_MaxFinestDays=3
+mongoDB_ResetIndexes=0
