PR #1080: [ Kismet Math Library ] New Node ~ Map Range Clamped, a Direct Implementation of GetMappedRangeValue that clamps the output value to the output range  Rama (Contributed by EverNewJoy)
[CL 2567530 by Marc Audy in Main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1228,6 +1228,9 @@ bUseStreamingPause=false
 +TaggedPropertyRedirects=(ClassName="SoundNodeWavePlayer",OldPropertyName="SoundWave",NewPropertyName="SoundWaveAssetPtr")
 +TaggedPropertyRedirects=(ClassName="SoundNodeModPlayer",OldPropertyName="SoundMod",NewPropertyName="SoundModAssetPtr")
 
+;Rename MapRange to MapRangeUnclamped - DEPRECATED(4.9)
++K2FieldRedirects=(OldFieldName="KismetMathLibrary.MapRange",NewFieldName="KismetMathLibrary.MapRangeUnclamped")
+
 [CoreUObject.Metadata]
 ; Note: UnrealHeaderTool should be rerun after making changes to MetadataRedirects to catch any keys specified in class headers
 +MetadataRedirects=(OldKey="K2Protected", NewKey="BlueprintProtected")
