Converted FUIAction to use ECheckBoxState when reporting its check state
There are now overloads to FUIAction that take a FGetActionCheckState delegate which is able to return any of the entries from ECheckBoxState. FIsActionChecked still exists for backwards compatibility, and converts the returned bool into a ECheckBoxState via a passthrough function.

#codereview Matt.Kuhlenschmidt

[CL 2570717 by Jamie Dale in Main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1176,7 +1176,8 @@ bUseStreamingPause=false
 
 ; UMG Checkbox State Rename
 
-+ActiveClassRedirects=(OldClassName="ESlateCheckBoxState", NewClassName="ECheckBoxState")
++ActiveClassRedirects=(OldClassName="ESlateCheckBoxState", NewClassName="/Script/SlateCore.ECheckBoxState")
++ActiveClassRedirects=(OldClassName="ECheckBoxState",NewClassName="/Script/SlateCore.ECheckBoxState")
 
 ; SplineComponent API overhaul
 +K2FieldRedirects=(OldFieldName="SplineComponent.GetNumSplinePoints",NewFieldName="SplineComponent.GetNumberOfSplinePoints")
