Unification of environment variable harvesting, GetExecutingAssembly* functions, GetShortPathName and CaselessDictionary from UBT into DotNETUtilities. Fixing up of existing code which used these facilities - this fixes the 'You are attempting to compile on a machine that does not have a supported compiler!' UAT error on machines with really long PATH variables, and exceptions in envvars with non-ASCII characters.
#codereview robert.manuszewski

[CL 2572445 by Steve Robb in Main branch]

--- a/Engine/Source/Programs/DotNETCommon/DotNETUtilities/DotNETUtilities.csproj
+++ b/Engine/Source/Programs/DotNETCommon/DotNETUtilities/DotNETUtilities.csproj
@@ -49,6 +49,10 @@
     <Compile Include="..\MetaData.cs">
       <Link>Properties\MetaData.cs</Link>
     </Compile>
+    <Compile Include="CaselessDictionary.cs" />
+    <Compile Include="ExecutingAssembly.cs" />
+    <Compile Include="FileSystem.cs" />
+    <Compile Include="HarvestEnvVars.cs" />
     <Compile Include="LaunchProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleWebRequest.cs" />
